More fixes after migration to 8

--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div class="main-row">
+<div class="my-3 main-row">
   <mdb-carousel [isControls]="true" 
                 class="carousel-multi-item multi-animation" 
                 [type]="'carousel-multi-item'" 
