--- a/src/app/components/navigation/sidenav/sidenav.component.scss
+++ b/src/app/components/navigation/sidenav/sidenav.component.scss
@@ -36,8 +36,8 @@ a:active {
 
 .theme-toggle {
   position: fixed;
-  top: 0;
+  bottom: 0;
   right: 0;
-  margin-right: 10px;
-  margin-top: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
