New proxy added

--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -1,4 +1,4 @@
-<section class="mt-5 status-bar">
+<section class="status-bar">
   <div class="row header-row">
     <h2 class="subtitle header-subtitle">
       {{(network$|async)}}
