Regen port branch inited

--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,4 +1,4 @@
-<app-chart-cards-gov *ngIf="proposals" [proposals]="proposals.slice(-3)"></app-chart-cards-gov>
+<!-- <app-chart-cards-gov *ngIf="proposals" [proposals]="proposals.slice(-3)"></app-chart-cards-gov> -->
 <div class="responsive-row">
   <div class="mat-elevation-z8 scrollbar-near-moon table-responsive text-nowrap">
     <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
