--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -52,7 +52,7 @@
         <td mat-cell *matCellDef="let tx"> 
           {{ 
             tx.fee?.amount ?
-            tx.fee.amount[0].amount : '0' 
+            tx.fee?.amount[0]?.amount : '0' 
           }}&nbsp;<span class="ticker">uatom</span> 
         </td>
       </ng-container>
