Small adjustments and fixes

--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -232,7 +232,7 @@
     </table>
   </div>
   <div class="button-row">
-    <button class="show-more" mdbBtn (click)="displayOlderTxs();" type="button" color="indigo" size="sm" block="true" mdbWavesEffect>Show More</button>
+    <button class="show-more" mdbBtn (click)="displayOlderTxs();" type="button" color="indigo" size="sm" block="true" mdbWavesEffect>Explore 30 Blocks</button>
   </div>
 </span>
 <ng-template #elseLoading>
