--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,8 +83,9 @@ p {
 }
 
 
-main {
+.main {
   padding-top: 5.5rem;
+  min-height: 100%;
 }
 
 /*-------------------------------------------------*/
