--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<section [className]="(theme$|async) === 'dark-theme' ? 'navy-blue-skin' : 'indigo-skin'">
+<section [className]="(theme$|async) === 'dark-theme' ? 'main navy-blue-skin' : 'main indigo-skin'">
   <header>
       <!-- Sidebar navigation -->
       <mdb-side-nav #sidenavRef class="sn-bg-1" [fixed]="false">
