--- a/src/app/components/scroll-top/scroll-top.component.html
+++ b/src/app/components/scroll-top/scroll-top.component.html
@@ -1,7 +1,8 @@
 <!--Scroll to top-->
-<div class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
-  <button class="btn btn-floating btn-large red waves-light" style="right:35px; bottom:35px;"
-(click)="scrollToTop()">
+<div class="scroll-to-top" style="z-index:110;" [ngClass]="{'show-scrollTop': windowScrolled}">
+  <button class="btn btn-floating btn-large red waves-light" 
+          style="right:35px; bottom:35px;"
+          (click)="scrollToTop()">
       <i class="fas fa-arrow-up"></i>
   </button>
 </div>
