--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -8,7 +8,7 @@
     <div class="proposer-row">
       <h2 *ngIf="(validatorsMap$|async).size" 
           class="title proposer-title">
-        <i class="ion-person"></i>&nbsp; proposer - 
+        <i class="ion ion-md-person"></i>&nbsp; proposer - 
         <a href="javascript:undefined" (click)="openValidatorDialog( proposer$ )" style="cursor: pointer;">
           <span *ngIf="(validatorsMap$|async).has( proposer$| async ); else elseBlockproposer">
             {{ (validatorsMap$|async).get( proposer$| async )}}
