--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -15,7 +15,6 @@ $light-theme: mat-light-theme($light-primary, $light-accent, $light-warn);
     color: black;
   }
 
-
   .mat-cell {
     color: black;
   }
@@ -163,6 +162,10 @@ $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
     font-size: 65%;
   }  
   
+  .header-subtitle {
+    color: #40c6c6;
+  }
+
   .btn-outline-custom {
     border: 2px solid #40c6c6 !important;
     background-color: transparent !important;
@@ -193,6 +196,7 @@ $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   .fail {
     color: #FF5722;/*#00796b;*/
   }    
+  
   .ticker {
     font-size: 80%;
     color: #40c6c6;
@@ -212,6 +216,7 @@ $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   max-width: 100vw;
   margin: 0;
 }
+
 @media (min-width: 768px) {
 
   .responsive-row {
