--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<section [className]="(theme$|async) === 'dark-theme' ? 'main white-skin' : 'main pink-skin'">
+<section [className]="(theme$|async) === 'dark-theme' ? 'main white-skin' : 'main cyan-skin'">
   <header>
       <!-- Sidebar navigation -->
       <mdb-side-nav #sidenavRef class="sn-bg-1" [fixed]="false">
@@ -91,7 +91,7 @@
     </mdb-side-nav>
 
     <!-- Navbar -->
-    <mdb-navbar SideClass="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav navbar-dark default-color"
+    <mdb-navbar SideClass="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav"
                 [containerInside]="false">
 
       <navlinks class="navbar-container">
@@ -108,7 +108,7 @@
         <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
           <a [routerLink]="['/validators']"><h1 class="brand-nav">Coris</h1></a>
           <mat-chip-list class="alpha-chip">
-            <mdb-badge color="pink">alpha</mdb-badge>
+            <mdb-badge color="amber"><span class="status">alpha</span></mdb-badge>
           </mat-chip-list>
         </div>
         
@@ -118,7 +118,7 @@
         <form class="form-inline waves-light waves-light ml-auto clearfix d-none d-xl-inline-block" mdbWavesEffect>
           <div  class="md-form my-0 mx-3">
             <input style="width: 30vw;" #searchQueryRef class="form-control mr-sm-2" type="text" placeholder="Enter moniker / address / height / hash" aria-label="Search">
-            <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="white" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
+            <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="amber" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
           </div>
         </form>
         <ul class="nav navbar-nav nav-flex-icons ml-auto ie-double-nav ie-hidden-double-nav d-xl-none">
