--- a/src/app/components/popups/account-detail/account-detail.component.html
+++ b/src/app/components/popups/account-detail/account-detail.component.html
@@ -41,7 +41,7 @@
                   </h4>
                 </div>
               </div>
-              <a class="btn pink btn-rounded waves-effect waves-light text-white" mdbWavesEffect>At a Glance</a>
+              <a class="btn amber btn-rounded waves-effect waves-light text-white" mdbWavesEffect>At a Glance</a>
             </div>
           </div>
         </mdb-card-body>
