--- a/src/app/components/scroll-top/scroll-top.component.html
+++ b/src/app/components/scroll-top/scroll-top.component.html
@@ -1,6 +1,6 @@
 <!--Scroll to top-->
 <div class="scroll-to-top" style="z-index:110;" [ngClass]="{'show-scrollTop': windowScrolled}">
-  <button class="btn btn-floating btn-large red waves-light" 
+  <button class="btn btn-floating btn-large waves-light" 
           style="right:35px; bottom:35px;"
           (click)="scrollToTop()">
       <i class="fas fa-arrow-up"></i>
