--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -7,8 +7,9 @@
           <ng-container matColumnDef="height" sticky>
             <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-soup-can"></i>&nbsp;Height</th>
             <td mat-cell *matCellDef="let block" >
-              <mdb-badge (click)="openBlockDialog(block)" 
-              style="cursor: pointer" color="pink">{{block.height}}</mdb-badge>
+              <!-- <mdb-badge (click)="openBlockDialog(block)" 
+              style="cursor: pointer" color="amber darken-2">{{block.height}}</mdb-badge> -->
+              <button mat-raised-button style="cursor: pointer"color="accent" (click)="openBlockDialog(block)" selected>{{block.height}}</button>
             </td>
           </ng-container>
         
