--- a/src/app/components/faucet/faucet.component.html
+++ b/src/app/components/faucet/faucet.component.html
@@ -26,7 +26,7 @@
     </div>
     <!-- Grid row -->
     <div class="pt-2">
-      <button type="button" (click)="onFaucetRequest(addrInputRef.value)" mdbBtn color="primary" outline="true" mdbWavesEffect>Claim</button>
+      <button mat-raised-button color="primary" (click)="onFaucetRequest(addrInputRef.value)">Claim</button>
     </div>
     
     <div class="alert {{statusClass}}" role="alert">
