--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -18,7 +18,7 @@
         </th>
         <td mat-cell *matCellDef="let proposal" mdbTooltip="{{proposal.proposal_content.value.title}}" placement="right">
           <div class="align-center">
-            <mdb-badge color="pink" style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">
+            <mdb-badge color="amber darken-2" style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">
               {{proposal.proposal_content.value.title | slice:0:20}} ...
             </mdb-badge>
           </div>
