--- a/src/app/components/popups/tx/tx.component.html
+++ b/src/app/components/popups/tx/tx.component.html
@@ -11,7 +11,7 @@
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Hash
-                  <h3 class="glance-title"><mdb-badge color="pink">
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2">
                     {{tx.hash | slice:0:15 }}... 
                     <i 
                       class="ion-ios-copy copy-button" 
@@ -35,15 +35,15 @@
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Height
-                  <h3 class="glance-title"><mdb-badge style="cursor:pointer" (click)="openBlockDialog(tx.height)" color="pink">{{tx.height}}</mdb-badge></h3>
+                  <h3 class="glance-title"><mdb-badge style="cursor:pointer" (click)="openBlockDialog(tx.height)" color="amber darken-2">{{tx.height}}</mdb-badge></h3>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Timestamp
-                    <h3 class="glance-title"><mdb-badge color="pink">{{tx.details?.timestamp | ago | async}}</mdb-badge></h3>
+                    <h3 class="glance-title"><mdb-badge color="amber darken-2">{{tx.details?.timestamp | ago | async}}</mdb-badge></h3>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Fee
-                  <h3 class="glance-title"><mdb-badge color="pink">
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2">
                     {{ 
                       tx.details?.tx.value.fee.amount ?
                       tx.details.tx.value.fee.amount[0].amount : '0' 
@@ -52,11 +52,11 @@
                 </li>
                 <li *ngIf="tx.gasUsed && tx.gasUsed" class="list-group-item d-flex justify-content-between align-items-center">
                   Gas (used/wanted)
-                  <h3 class="glance-title"><mdb-badge color="pink">{{ tx.gasUsed }}/{{ tx.gasWanted }}</mdb-badge></h3>
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2">{{ tx.gasUsed }}/{{ tx.gasWanted }}</mdb-badge></h3>
                 </li>
                 <li *ngIf="tx.memo.length > 0" class="list-group-item d-flex justify-content-between align-items-center">
                   Memo
-                  <h3 class="glance-title"><mdb-badge color="pink">{{ tx.memo }}</mdb-badge></h3>
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2">{{ tx.memo }}</mdb-badge></h3>
                 </li>
             </ul>
         </mdb-card-body>
@@ -72,13 +72,13 @@
               <span *ngFor="let action of tx.action; index as i">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Type
-                  <h3 class="glance-title"><mdb-badge color="pink">{{ action | titlecase}}</mdb-badge></h3>
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2">{{ action | titlecase}}</mdb-badge></h3>
                 </li>
                 
                 <li *ngIf="tx.msg[i].value.from_address" class="list-group-item d-flex justify-content-between align-items-center">
                   From
                   <h3 class="glance-title"><mdb-badge style="cursor:pointer;" 
-                    (click)="openAccountDialog(tx.msg[i].value.from_address)"color="pink">
+                    (click)="openAccountDialog(tx.msg[i].value.from_address)"color="amber darken-2">
                     <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( tx.msg[i].value.from_address ) : false; else elseSender">
                       {{ (validatorsState | async).validatorsMap.get( tx.msg[i].value.from_address )}}
                     </span>
@@ -98,7 +98,7 @@
                 
                 <li *ngIf="tx.msg[i].value.to_address" class="list-group-item d-flex justify-content-between align-items-center">
                   To
-                  <h3 class="glance-title"><mdb-badge color="pink" style="cursor:pointer;" 
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2" style="cursor:pointer;" 
                     (click)="openAccountDialog(tx.msg[i].value.to_address)">
                     <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( tx.msg[i].value.to_address ) : false; else elseRecipient">
                       {{ (validatorsState | async).validatorsMap.get( tx.msg[i].value.to_address )}}
@@ -119,7 +119,7 @@
                 
                 <li *ngIf="tx.msg[i].value.delegator_address" class="list-group-item d-flex justify-content-between align-items-center">
                   Delegator
-                  <h3 class="glance-title"><mdb-badge color="pink" style="cursor:pointer;" 
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2" style="cursor:pointer;" 
                     (click)="openAccountDialog(tx.msg[i].value.delegator_address)">
                     <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( tx.msg[i].value.delegator_address ) : false; else elseDelegator">
                       {{ (validatorsState | async).validatorsMap.get( tx.msg[i].value.delegator_address )}}
@@ -140,7 +140,7 @@
                 
                 <li *ngIf="tx.msg[i].value.validator_address" class="list-group-item d-flex justify-content-between align-items-center">
                   Validator
-                  <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"
                     style="cursor: pointer">
                     <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( tx.msg[i].value.validator_address ) : false; else elseValidator">
                       {{ (validatorsState | async).validatorsMap.get( tx.msg[i].value.validator_address )}}
@@ -162,7 +162,7 @@
                 <li *ngIf="tx.msg[i].value.validator_src_address" 
                     class="list-group-item d-flex justify-content-between align-items-center">
                   From
-                  <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_src_address )"
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_src_address )"
                     style="cursor: pointer">
                     <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( tx.msg[i].value.validator_src_address ) : false; else elseSrcValidator">
                       {{ (validatorsState | async).validatorsMap.get( tx.msg[i].value.validator_src_address )}}
@@ -184,7 +184,7 @@
                 <li *ngIf="tx.msg[i].value.validator_dst_address" 
                     class="list-group-item d-flex justify-content-between align-items-center">
                   To
-                  <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_dst_address )"
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_dst_address )"
                     style="cursor: pointer">
                     <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( tx.msg[i].value.validator_dst_address ) : false; else elseDstValidator">
                       {{ (validatorsState | async).validatorsMap.get( tx.msg[i].value.validator_dst_address )}}
@@ -207,7 +207,7 @@
                   <li *ngIf="tx.msg[i].value.address" 
                       class="list-group-item d-flex justify-content-between align-items-center">
                     Validator
-                    <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.address )"
+                    <h3 class="glance-title"><mdb-badge color="amber darken-2" (click)="openValidatorDetailDialog( tx.msg[i].value.address )"
                       style="cursor: pointer">
                       <span *ngIf="(validatorsState | async).validatorsMap.size ? (validatorsState | async).validatorsMap.has( tx.msg[i].value.address ) : false; else elseDstValidator">
                         {{ (validatorsState | async).validatorsMap.get( tx.msg[i].value.address )}}
@@ -229,7 +229,7 @@
                       class="list-group-item d-flex justify-content-between align-items-center">
                     {{ key | titlecase }}
                     <h3 class="glance-title">
-                      <mdb-badge color="pink">
+                      <mdb-badge color="amber darken-2">
                           <span *ngIf="tx.msg[i].value.Description[key] !== '[do-not-modify]'; else elseUpdateValue">
                             {{ tx.msg[i].value.Description[key] }}
                           </span>
@@ -243,7 +243,7 @@
                   <li *ngFor="let input of tx.msg[i].value.inputs" 
                       class="list-group-item d-flex justify-content-between align-items-center">
                     Sender
-                    <h3 class="glance-title"><mdb-badge color="pink" (click)="openAccountDialog( input.address )"
+                    <h3 class="glance-title"><mdb-badge color="amber darken-2" (click)="openAccountDialog( input.address )"
                       style="cursor: pointer;">
                       <span *ngIf="(validatorsState | async).validatorsMap.size 
                                     ? (validatorsState | async).validatorsMap.has( input.address ) 
@@ -266,7 +266,7 @@
                   <li *ngFor="let output of tx.msg[i].value.outputs" 
                       class="list-group-item d-flex justify-content-between align-items-center">
                     Recipient
-                    <h3 class="glance-title"><mdb-badge color="pink" (click)="openAccountDialog( output.address )"
+                    <h3 class="glance-title"><mdb-badge color="amber darken-2" (click)="openAccountDialog( output.address )"
                       style="cursor: pointer;">
                       <span *ngIf="(validatorsState | async).validatorsMap.size 
                                     ? (validatorsState | async).validatorsMap.has( output.address ) 
@@ -289,7 +289,7 @@
                   <li *ngFor="let output of tx.msg[i].value.outputs; index as j" 
                       class="list-group-item d-flex justify-content-between align-items-center">
                     Amount {{j+1}}:
-                    <h3 class="glance-title"><mdb-badge color="pink">
+                    <h3 class="glance-title"><mdb-badge color="amber darken-2">
                         {{ output.coins[0].amount/1e6 | number:".2-2" }}&nbsp;ATOM
                     </mdb-badge></h3>
                   </li>
@@ -298,7 +298,7 @@
                 <li *ngIf="tx.msg[i].value.amount" 
                     class="list-group-item d-flex justify-content-between align-items-center">
                   Amount
-                  <h3 class="glance-title"><mdb-badge color="pink">
+                  <h3 class="glance-title"><mdb-badge color="amber darken-2">
                       {{ ( tx.msg[i].value.amount.length ? tx.msg[i].value.amount[0].amount : tx.msg[i].value.amount.amount )/1e6 | number:".2-2" }}&nbsp;ATOM 
                   </mdb-badge></h3>
                 </li>
