--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -9,7 +9,7 @@
       <ng-container matColumnDef="hash" sticky>
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>&nbsp;Hash</th>
         <td mat-cell *matCellDef="let tx" mdbWavesEffect> 
-          <mdb-badge color="pink">{{tx.hash | slice:0:15 }}... 
+          <mdb-badge color="amber darken-2">{{tx.hash | slice:0:15 }}... 
           </mdb-badge>&nbsp;
           <i 
           class="ion-ios-copy copy-button" 
