--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -9,7 +9,7 @@
       <ng-container matColumnDef="hash" sticky>
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>&nbsp;Hash</th>
         <td mat-cell *matCellDef="let tx" mdbWavesEffect> 
-          <mdb-badge color="pink">{{tx.hash | slice:0:15 }}... 
+          <mdb-badge color="amber darken-2">{{tx.hash | slice:0:15 }}... 
           </mdb-badge>&nbsp;
           <i 
           class="ion-ios-copy copy-button" 
@@ -52,7 +52,7 @@
         <td mat-cell *matCellDef="let tx"> 
           {{ 
             tx.fee?.amount ?
-            tx.fee.amount[0].amount : '0' 
+            tx.fee?.amount[0]?.amount : '0' 
           }}&nbsp;<span class="ticker">uatom</span> 
         </td>
       </ng-container>
@@ -232,7 +232,7 @@
     </table>
   </div>
   <div class="button-row">
-    <button class="show-more" mdbBtn (click)="displayOlderTxs();" type="button" color="indigo" size="sm" block="true" mdbWavesEffect>Show More</button>
+    <button class="show-more" mdbBtn (click)="displayOlderTxs();" type="button" color="indigo" size="sm" block="true" mdbWavesEffect>Explore 30 Blocks</button>
   </div>
 </span>
 <ng-template #elseLoading>
