Missing files added

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -6,7 +6,7 @@
           <li>
             <div class="logo-wrapper waves-light">
               <a [routerLink]="['/validators']">
-              <img [src]="(theme$|async) === 'dark-theme' ? '../../../../assets/img/Coris_logo.png' : '../../../../assets/img/Coris_logo.png'" class="img-fluid flex-center logo">
+              <img [src]="(theme$|async) === 'grey-theme' ? '../../../../assets/img/Coris_logo.png' : '../../../../assets/img/Coris_logo.png'" class="img-fluid flex-center logo">
               </a>
             </div>
           </li>
